<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_login_horizontal_margin"
    android:paddingRight="@dimen/activity_login_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.tudor.rotarus.unibuc.metme.activities.login.LoginNameActivity">

    <TextView
        android:id="@+id/activity_login_name_textView_instructions"
        android:layout_above="@+id/activity_login_name_editText_firstName"
        android:gravity="center"
        android:textColor="@color/editTextField"
        android:textSize="@dimen/text_big"
        android:text="@string/login_name_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/activity_login_name_editText_firstName"
        android:layout_above="@+id/activity_login_name_editText_lastName"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/editTextField"
        android:hint="@string/first_name"
        android:textSize="@dimen/text_big"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:paddingTop="@dimen/edit_text_padding_vertical"
        android:paddingBottom="@dimen/edit_text_padding_vertical"
        android:paddingLeft="@dimen/edit_text_padding_horizontal"
        android:paddingRight="@dimen/edit_text_padding_horizontal"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/activity_login_name_editText_lastName"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/editTextField"
        android:hint="@string/last_name"
        android:textSize="@dimen/text_big"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:paddingTop="@dimen/edit_text_padding_vertical"
        android:paddingBottom="@dimen/edit_text_padding_vertical"
        android:paddingLeft="@dimen/edit_text_padding_horizontal"
        android:paddingRight="@dimen/edit_text_padding_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:inputType="textCapWords"/>

    <Button
        android:id="@+id/activity_login_name_button_ok"
        android:layout_below="@+id/activity_login_name_editText_lastName"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:background="@color/btn"
        android:textColor="@color/editTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cont"
        android:paddingLeft="@dimen/login_btn_horizontal_padding"
        android:paddingRight="@dimen/login_btn_horizontal_padding"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
