<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_login_horizontal_margin"
    android:paddingRight="@dimen/activity_login_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.tudor.rotarus.unibuc.metme.LoginActivity">

    <!--<TextView-->
        <!--android:id="@+id/activity_login_textView_title"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:textColor="@color/editTextField"-->
        <!--android:textSize="@dimen/loginTitleText"-->
        <!--android:text="@string/app_name"/>-->

    <TextView
        android:id="@+id/activity_login_textView_instructions"
        android:layout_above="@+id/activity_login_linearLayout_country"
        android:gravity="center"
        android:textColor="@color/editTextField"
        android:textSize="@dimen/text_big"
        android:text="@string/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/activity_login_linearLayout_country"
        android:layout_above="@+id/activity_login_editText_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/activity_login_editText_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/login_horizontal_editText_margin"
            android:background="@color/editTextField"
            android:hint="@string/country"
            android:textSize="@dimen/text_big"
            android:paddingTop="@dimen/edit_text_padding_vertical"
            android:paddingBottom="@dimen/edit_text_padding_vertical"
            android:paddingLeft="@dimen/edit_text_padding_horizontal"
            android:paddingRight="@dimen/edit_text_padding_horizontal"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/activity_login_editText_country_prefix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_horizontal_editText_margin"
            android:background="@color/editTextField"
            android:inputType="phone"
            android:hint="@string/prefix"
            android:textSize="@dimen/text_big"
            android:paddingTop="@dimen/edit_text_padding_vertical"
            android:paddingBottom="@dimen/edit_text_padding_vertical"
            android:paddingLeft="@dimen/edit_text_padding_horizontal"
            android:paddingRight="@dimen/edit_text_padding_horizontal"
            android:layout_weight="1"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/activity_login_editText_phone_number"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:background="@color/editTextField"
        android:hint="@string/phoneNumber"
        android:textSize="@dimen/text_big"
        android:paddingTop="@dimen/edit_text_padding_vertical"
        android:paddingBottom="@dimen/edit_text_padding_vertical"
        android:paddingLeft="@dimen/edit_text_padding_horizontal"
        android:paddingRight="@dimen/edit_text_padding_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/activity_login_button_ok"
        android:layout_below="@+id/activity_login_editText_phone_number"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:background="@color/btn"
        android:textColor="@color/editTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cont"
        android:paddingLeft="@dimen/login_btn_horizontal_padding"
        android:paddingRight="@dimen/login_btn_horizontal_padding"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
