<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tudor.rotarus.unibuc.metme.activities.AddPickupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/activity_add_pickup_title_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/add_meeting_vertical_padding"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/add_meeting_vertical_padding"
                android:hint="@string/add_meeting_name_instr"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:singleLine="true" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/activity_add_pickup_place_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/add_meeting_vertical_padding"
                android:layout_marginTop="@dimen/add_meeting_vertical_padding"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/activity_add_pickup_place_icon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/ic_location_on_black_24dp"
                    android:tint="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/add_meeting_horizontal_margin"
                    android:layout_marginRight="@dimen/add_meeting_horizontal_margin"
                    android:layout_weight="9"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/activity_add_pickup_place_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/add_meeting_horizontal_margin"
                        android:layout_marginRight="@dimen/add_meeting_horizontal_margin"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:paddingBottom="@dimen/add_meeting_time_between_vertical_margin"
                        android:paddingTop="@dimen/add_meeting_time_vertical_margin"
                        android:text="@string/add_meeting_location_instruct" />

                    <EditText
                        android:id="@+id/activity_add_pickup_place_alias_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/add_meeting_time_vertical_margin"
                        android:layout_marginLeft="@dimen/add_meeting_horizontal_margin"
                        android:layout_marginRight="@dimen/add_meeting_horizontal_margin"
                        android:layout_marginTop="@dimen/add_meeting_time_between_vertical_margin"
                        android:hint="@string/add_meeting_loc_alias_instr"
                        android:imeOptions="actionDone"
                        android:inputType="textCapSentences"
                        android:singleLine="true"
                        android:textSize="@dimen/text_primary" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/activity_add_pickup_transport_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/add_meeting_vertical_padding"
                android:paddingTop="@dimen/add_meeting_vertical_padding">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_directions_car_black_24dp"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/activity_add_pickup_transport_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/add_meeting_horizontal_margin"
                    android:layout_marginRight="@dimen/add_meeting_horizontal_margin"
                    android:layout_weight="9"
                    android:text="@string/car"
                    android:textAllCaps="true" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/activity_add_pickup_type_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/add_meeting_vertical_padding"
                android:paddingTop="@dimen/add_meeting_vertical_padding">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_compare_arrows_black_24dp"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/activity_add_pickup_type_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/add_meeting_horizontal_margin"
                    android:layout_marginRight="@dimen/add_meeting_horizontal_margin"
                    android:layout_weight="9"
                    android:text="Casual" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
